# claude-session-manager

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  README.ja.md  README.md  README.zh-CN.md  STRATEGY.md  app.py  build.spec  menubar.py  package-lock.json  package.json  requirements.txt  server.py  tsconfig.json
.github/workflows/: release.yml
crates/csm-core/: Cargo.toml
crates/csm-core/examples/: tokenize_test.rs
crates/csm-core/src/: embedding.rs  hybrid.rs  lib.rs  models.rs  search.rs  sessions.rs  vector_index.rs
crates/csm-core/tests/: search_integration.rs
crates/csm-core/tests/fixtures/claude-data/: history.jsonl
crates/csm-core/tests/fixtures/claude-data/projects/-Users-test-proj-a/: 00000000-0000-0000-0000-000000000001.jsonl  00000000-0000-0000-0000-000000000002.jsonl  00000000-0000-0000-0000-000000000003.jsonl
crates/csm-mcp/: Cargo.toml
crates/csm-mcp/src/: main.rs
demo-data/: history.jsonl
docs/: search-findings.md
frontend/: index.html  readme.html
frontend/js/: app.js  boot.js  chatSearch.js  dom.js  fullTextSearch.js  i18n.js  icons.js  layoutControls.js  preview.js  searchResultRenderer.js  searchTelemetry.js  searchUtils.js  searchView.js  sessionActions.js  sessionListView.js  shortcuts.js  tauri.js  terminal.js  theme.js  toolRenderer.js  updater.js  utils.js  vectorIndexControls.js
frontend/styles/: app.css  tailwind-input.css
frontend/ts/: app.ts  boot.ts  chatSearch.ts  dom.ts  fullTextSearch.ts  globals.d.ts  i18n.ts  icons.ts  layoutControls.ts  preview.ts  searchResultRenderer.ts  searchTelemetry.ts  searchUtils.ts  searchView.ts  sessionActions.ts  tauri.ts  (+9 more)
scripts/: generate_demo_sessions.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  menu.rs  models.rs  search.rs  tray.rs
src-tauri/src/commands/: archive.rs  clipboard.rs  embedding.rs  mod.rs  projects.rs  pty.rs  resume.rs  search.rs  sessions.rs  settings.rs  updater.rs  vector_search.rs
static/: index.html
(+10 files in other folders)
