[package]
name = "claude-session-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
tantivy = "0.22"
tauri-plugin-window-state = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
