[package]
name = "claude-session-manager"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csm-core = { path = "../crates/csm-core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
arboard = "3"
base64 = "0.22"
regex = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
