[package]
name = "csm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
lindera-tantivy = { version = "2.0", features = ["embed-ipadic"] }
lindera = "2.3"
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
fastembed = "5"

[dev-dependencies]
tempfile = "3"
