[package]
name = "csm-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
csm-core = { path = "../csm-core" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
